<resources>
    <string name="app_name">3773Project2</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_inbox">Inbox</string>
    <string name="action_outbox">Outbox</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_new_message">Send new message</string>
    <string name="action_profile">View profile</string>
</resources>
